# C-and-CPP-Course

./: README.md
ex1 - Cipher/: README.md
ex1 - Cipher/src/: README.md  cipher  cipher.c  main.c  tests.c
ex2 - Bus Line/: README.md
ex2 - Bus Line/src/: main.c  sort_bus_lines.c  sort_bus_lines.h  sort_lines  test_bus_lines.c  test_bus_lines.h
ex3/: README.md
ex3/src/: important_function_general.c  linked_list.c  markov_chain.c  markov_chain.h  tweets_generator.c
ex3b/: README.md
ex3b/src/: important_function_general.c  linked_list.c  makefile  markov_chain.c  markov_chain.h  snake  snakes_and_ladders.c  tweets_generator.c
ex4/: READNE.md
ex4/src/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  main.cpp
ex5/: README.md
ex5/src/: Movie.cpp  Movie.h  RecommendationSystem.cpp  RecommendationSystem.h  RecommendationSystemLoader.cpp  RecommendationSystemLoader.h  User.cpp  User.h  UsersLoader.cpp  UsersLoader.h  point.h  print_main.cpp
